--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 .header {
     width: 100%;
     min-height: 100vh;
-    background-image: url('../images/bg.jpg');
+    background-image:linear-gradient(rgba(0, 0, 0, 0.535),rgba(0, 0, 0, 0.356)),url('../images/bg.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
@@ -15,7 +15,8 @@
 
 .logo img {
     float: left;
-    margin-top: 2em;
+    margin-top: 3.15em;
+    padding-left: 30px;
     width: 40px;
 
 }
@@ -25,31 +26,37 @@
     left: 10px;
     color: rgb(21, 174, 185);
     font-size: 35px;
-    padding: 22px 0 0 22px;
+    padding: 40px 50px;
     margin-left: 27px;
 }
 
 nav {
     display: flex;
-    padding: 2% 6%;
+    flex-direction: row;
+    /*padding: 2% 6%; */
     justify-content: space-between;
     align-items: center;
+    width:100%;  
 }
 
-nav img {
+/*nav img {
     width: 150px;
-}
+} */
+
 
 .navlinks {
     flex: 1;
     text-align: right;
-}
+   
+}  */
 
 .navlinks ul li {
     list-style: none;
     display: inline-block;
-    padding: 8px 12px;
-    position: relative;
+    padding-top: 1em;
+    margin:0px 20px; 
+    /* padding: 8px 12px; */
+    position: relative; 
 }
 
 .navlinks ul li a {
@@ -60,13 +67,55 @@ nav img {
 
 .navlinks ul li a:hover {
     color: rgb(21, 174, 185);
+    transition: 0.8s;
 }
 
+.navlinks ul li::after{
+    content:'';
+    height:2px;
+    width:0%;
+    background: rgb(21, 174, 185);
+    margin:auto;
+    display: block;
+    /* position:absolute;
+    left:0;
+    bottom:-6px;
+    transition: 0.5s; */
+}
 
-.icon img {
+.navlinks ul li:hover::after{
+    width:100%;
+    transition: width 0.35s linear;
+}
+
+/*.icon img {
     padding-left: 95%;
     margin-bottom: 1.3em;
     width: 20px;
+    cursor: pointer;
+} */
+
+#item{
+    display:flex;
+    flex-direction: row;
+    justify-content:end;
+    align-items:center;
+}
+
+#item li{
+    list-style: none;
+    padding-right: 50px;
+}
+
+#item .icon i{
+    color:white;
+    padding-right: 30px;
+    font-weight: bolder;
+}
+
+#item li a:hover, #item .icon i:hover{
+    color: rgb(21, 174, 185);
+    transition: 0.8s;
     cursor: pointer;
 }
 
@@ -81,6 +130,7 @@ nav img {
 }
 
 .textbox h1 {
+    padding-top: 1em;;
     font-size: 60px;
 }
 
@@ -101,6 +151,46 @@ nav img {
 
 }
 
+button{
+    width:200px;
+    padding: 15px;
+    text-align: center;
+    margin:20px 10px;
+    border-radius: 25px;
+    font-weight:bold;
+    font-size: 0.95em;
+    border:2px  rgb(21, 174, 185);
+    background: transparent;
+    color:white;
+    cursor: pointer;
+    position: relative;
+    overflow:hidden;
+}
+
+span{
+    background: rgb(21, 174, 185);
+    height: 100%;
+    width:0;
+    border-radius: 25px;
+    position:absolute;
+    left:0;
+    bottom: 0;
+    z-index: -1;
+    transition:0.5s
+}
+
+button:hover span{
+    width:100%;
+}
+
+button:hover{
+    border:none;
+    color: rgb(6, 52, 55);
+    font-weight: bolder;
+    transition: 1s;
+}
+
+/*
 .btn1 {
     display: inline-block;
     text-decoration: none;
@@ -112,28 +202,93 @@ nav img {
     background: transparent;
     position: relative;
     cursor: pointer;
-}
+} */
 
 .btn2 {
-    display: inline-block;
+    width:200px;
+    padding: 15px;
+    text-align: center;
+    margin:20px 10px;
+    
+    font-weight:bold;
+    font-size: 13px;
+    border:2px solid rgb(21, 174, 185);
+    background: transparent;
+    color: white;
+    cursor: pointer;
+    position: relative;
+    overflow:hidden;
+    /*display: inline-block;
     text-decoration: none;
     color: white;
     padding: 12px 34px;
+    border-radius: 25px;
+    font-weight:bold;
     font-size: 13px;
-    background-color: rgb(21, 174, 185);
+    border:2px solid rgb(21, 174, 185);
     position: relative;
-    cursor: pointer;
+    cursor: pointer; */
 }
 
+/*
 .btn1:hover {
     color: rgb(21, 174, 185);
-}
+} */
 
 .btn2:hover {
-    border: 1px solid white;
-    background: rgba(21, 174, 185, 0.527);
+    border: 2px solid white;
+    background: rgba(21, 174, 185, 0.473);
     transition: 1.2s;
+} 
+
+.buttons{
+    position:relative;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
 }
+
+nav.fa{
+    display: none;
+}
+
+@media(max-width: 700px)
+{
+    .textbox h1 {
+        padding-top: 1em;
+        font-size: 35px;
+    }
+
+    .navlinks ul li {
+        display: block;
+    }
+    .navlinks {
+        position: absolute;
+        background-color: rgb(22, 143, 151);
+        height:100vh;
+        width:200px;
+        top:0;
+        right:-200px;
+        text-align: left;
+        z-index: 2;
+        transition:1s;
+    }
+    
+    nav .fa{
+        display:block;
+        color:white;
+        margin: 10px;
+        font-size: 15px;
+        cursor:pointer;
+    }
+
+    .navlinks ul{
+        padding:30px;
+    }
+
+}
+
 
 .programs {
     padding-top: 70px;
@@ -301,6 +456,6 @@ h4 {
     background: #333;
     color: white;
     text-align: center;
-    padding: 20px;
+    padding: 40px;
     margin-top: 40px;
 }
